syntax = "proto3";

package codehorse.mpaas.node;

option go_package = "github.com/solodba/devcloud/mpaas/apps/node";

// 导入外部包
import "apps/node/pb/node.proto";

// Node业务功能接口
service RPC {
    // 获取Node集合
    rpc QueryNode(QueryNodeRequest) returns(NodeSet);
    // 获取Node详情
    rpc DescribeNode(DescribeNodeRequest) returns(NodeSetItem);
    // 更新NodeLabel
    rpc UpdateNodeLabel(UpdatedLabelRequest) returns(UpdatedLabelResponse);
    // 更新NodeTaint
    rpc UpdateNodeTaint(UpdatedTaintRequest) returns(UpdatedTaintResponse);
}

// QueryNodeRequest结构体
message QueryNodeRequest {
    // @gotags: bson:"keyword" json:"keyword"
    string Keyword = 1;
}

// DescribeNodeRequest结构体
message DescribeNodeRequest {
    // @gotags: bson:"name" json:"name"
    string Name = 1;
}

// UpdatedLabelRequest结构体
message UpdatedLabelRequest {
    // @gotags: bson:"name" json:"name"
    string Name = 1;
    // @gotags: bson:"labels" json:"labels"
    repeated ListMapItem Labels = 2;
}

// UpdatedTaintRequest结构体
message UpdatedTaintRequest {
     // @gotags: bson:"name" json:"name"
     string Name = 1;
     // @gotags: bson:"taints" json:"taints"
     repeated Taint Taints = 2;
}

// UpdatedLabelResponse结构体
message UpdatedLabelResponse {
}

// UpdatedTaintResponse结构体
message UpdatedTaintResponse {
}